--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,11 +2,12 @@
   {
     "name": "URL Monitor Bash Script",
     "desc": "Monitor URLs from any Linux Server via Bash Scripts for X minutes and if they are DOWN, alert via Email | Slack",
-    "image": "notystackandroid",
+    "image": "slack-url-alert",
     "category": "mern",
     "links": {
       "code": "https://github.com/rajmohanacharya/url-monitor-scripts/"
     }
   }
 ]
+
 
