--- a/projects/projects.json
+++ b/projects/projects.json
@@ -6,8 +6,18 @@
     "category": "mern",
     "links": {
       "code": "https://github.com/rajmohanacharya/url-monitor-scripts/"
-    }
+             }
+  },
+    {
+    "name": "FTP-HTTP-Download-to-Google-Drive",
+    "desc": "Fast, reliable Google Colab notebook to download files directly from FTP/HTTP URLs to Google Drive",
+    "image": "slack-url-alert",
+    "category": "mern",
+    "links": {
+      "code": "https://github.com/rajmohanacharya/Google-Colab-Direct-FTP-HTTP-Download-to-Google-Drive"
+             }
   }
 ]
+
 
 
